// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaimDetails component matches the snapshot on render 1`] = `
<ScrollContainer>
  <Block
    style={
      Object {
        "marginBottom": 33.35,
        "marginTop": 33.35,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgb(5, 5, 13)",
          "fontFamily": "TT Commons",
          "fontSize": 30,
          "textAlign": "center",
        }
      }
    >
      Email
    </Text>
  </Block>
  <Block
    style={
      Object {
        "marginBottom": 33.35,
        "marginTop": 33.35,
      }
    }
  >
    <TextInputField
      fieldName="email"
      fieldValue="test@test.com"
      handleFieldInput={[Function]}
      key="email"
    />
  </Block>
  <Block
    style={
      Object {
        "marginBottom": 66.7,
        "marginTop": 66.7,
      }
    }
  >
    <JolocomButton
      disabled={false}
      onPress={[Function]}
      text="Add claim"
      upperCase={false}
    />
  </Block>
</ScrollContainer>
`;

exports[`ClaimDetails component matches the snapshot on render with multi-line claim 1`] = `
<ScrollContainer>
  <Block
    style={
      Object {
        "marginBottom": 33.35,
        "marginTop": 33.35,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgb(5, 5, 13)",
          "fontFamily": "TT Commons",
          "fontSize": 30,
          "textAlign": "center",
        }
      }
    >
      Name
    </Text>
  </Block>
  <Block
    style={
      Object {
        "marginBottom": 33.35,
        "marginTop": 33.35,
      }
    }
  >
    <TextInputField
      fieldName="givenName"
      fieldValue="natascha"
      handleFieldInput={[Function]}
      key="givenName"
    />
    <TextInputField
      fieldName="familyName"
      fieldValue="test"
      handleFieldInput={[Function]}
      key="familyName"
    />
  </Block>
  <Block
    style={
      Object {
        "marginBottom": 66.7,
        "marginTop": 66.7,
      }
    }
  >
    <JolocomButton
      disabled={false}
      onPress={[Function]}
      text="Add claim"
      upperCase={false}
    />
  </Block>
</ScrollContainer>
`;
